<resources>
    <string name="app_name">HowsMyStylist</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="reset_message">Please enter you email to receive password reset link.</string>
    <string name="register_create">Create Account</string>
    <string name="create_profile">Create Profile</string>
    <string name="register_backToLogin">Already have an account?</string>
    <string name="register_policy">Term &amp; policy</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="personal_info">Personal information</string>
    <string name="account_security">Account security</string>
    <string name="username">Username</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthday">Birthday (dd/mm/yyyy)</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="upload">Upload</string>
    <string name="dialog_createSalon_message">The salon you entered does not exist in How\'s My Stylist now.
        Please help us create the salon profile first!
    </string>
    <string name="dialog_createSalon_title">Go To Create Salon\'s Profile</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="confirmPwd">Confirm password</string>
    <string name="popularStylists">Popular Stylists</string>
    <string name="popularSalons">Popular Salons</string>
    <string name="popularReviews">Popular Reviews</string>

</resources>