<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register_create"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_firstname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/firstName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/lastName"
            tools:ignore="TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/edit_reg_birthday"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/birthday"
            android:paddingVertical="8dp"
            android:paddingStart="5dp"
            android:textColorHint="#9D9D9D"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#8C8C8C" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/confirmPwd"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agree with"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_policy"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_policy"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_createAccount"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_login"
                android:text="@string/register_create"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/register_backToLogin"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_registerLogin"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>