<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/hms_logo" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:hint="@string/reset_message" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Email"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_login"
                android:text="@string/reset_password"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_register"
                android:text="@string/cancel" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>