<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadStylistProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- SECTION 1 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/uploadStylistTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Upload a New Stylist Profile"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/uploadStylistDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadStylistTitle"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Your favorite stylist is not in our database yet? you can add it here!"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadStylistDes"
                android:layout_marginVertical="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Stylist Picture"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- SECTION 2 -->
        <LinearLayout
            android:id="@+id/cardViewBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="-100dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/stylistProfile_img"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_weight="1"
                            android:src="@drawable/hms_logo2" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_stylistChoosePic"
                                android:layout_width="150dp"
                                android:layout_height="35dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/btn_register"
                                android:text="@string/choose_picture" />

                            <TextView
                                android:layout_width="149dp"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="4dp"
                                android:text="Select a your logo or a photo that best represented to you!"
                                android:textSize="10sp" />
                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- SECTION 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="Stylist Details"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@+id/uploadStylistDes"/>

            <!-- FIRST NAME & LAST NAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- FIRST NAME -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_stylistFirstName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:hint="First name *"
                    app:boxBackgroundColor="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/input_lastName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--LAST NAME -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_stylistLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:hint="Last name *"
                    app:boxBackgroundColor="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/input_firstName"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_above="@+id/input_stylistEmail"
                android:layout_gravity="center">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOption_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Male"
                    android:onClick="onRadioButtonClicked"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOption_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Female"
                    android:onClick="onRadioButtonClicked"/>/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioOption_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Other"
                    android:onClick="onRadioButtonClicked"/>/>
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#686868"/>
            <!-- PHONE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_stylistPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone"
                app:boxBackgroundColor="@null"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_stylistEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                app:boxBackgroundColor="@null"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- SALON NAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- COUNTRY -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:hint="Salon name"
                    android:layout_marginEnd="5dp"
                    app:boxBackgroundColor="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/input_stylistSalonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <!-- UPDATE BUTTON-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_createStylistProfile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_login"
                android:layout_marginTop="10dp"
                android:text="@string/create_profile"
                android:textColor="@color/white" />

            <!-- CANCEL BUTTON-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_stylistCreationCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_register"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>

